--- a/src/scss/mobile/header/__mobileMenu/_nav/_nav.scss
+++ b/src/scss/mobile/header/__mobileMenu/_nav/_nav.scss
@@ -1,15 +1,18 @@
 .header__mobileMenu_nav {
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 16px;
+  padding: 0 16px;
 
     &-list {
-        list-style-type: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 16px;
+      list-style-type: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      width: 100%;
     }
 
     &-btn {
@@ -39,6 +42,6 @@
     }
 
     &-item {
-        background-color: #ffffff00;
+        width: 100%;
     }
 }
