--- a/src/scss/mobile/header/address/address_content.scss
+++ b/src/scss/mobile/header/address/address_content.scss
@@ -24,6 +24,7 @@
 
     &_mark {
 
+      background-image: url('/src/assets/svg/point.svg');
         height: 18px;
         width: 18px;
         background-position: center center;
