--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -5,5 +5,5 @@
 
 @font-face {
   font-family: 'Work Sans';
-  src: url("./work-sans/WorkSans-VariableFont_wdth\,wght.ttf") format('woff2');
+  src: url("./work-sans/WorkSans-VariableFont_wght.ttf") format('woff2');
 }
