--- a/src/scss/mobile/calculation/__block/__block.scss
+++ b/src/scss/mobile/calculation/__block/__block.scss
@@ -83,6 +83,14 @@
   }
 }
 
+@media screen and (max-width: 1194px) {
+  .calculation__block{
+    &_text-description{
+      max-width: 500px;
+    }
+  }
+}
+
 @media screen and (max-width: 755px){
   .calculation__block{
     padding-left: 16px;
