--- a/src/scss/mobile/footer/__fringe/__fringe.scss
+++ b/src/scss/mobile/footer/__fringe/__fringe.scss
@@ -28,6 +28,13 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+
+      background-image: url("/src/assets/svg/logo_hover.svg");
+    }
 
     @media screen and (min-width: 1194px) {
 
