--- a/src/scss/mobile/header/__mobileMenu/_application/_application.scss
+++ b/src/scss/mobile/header/__mobileMenu/_application/_application.scss
@@ -8,22 +8,29 @@
     border-radius: 0 0 16px 16px;
 
     &-btn {
-        font-family: "Noto Sans", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        width: 95%;
-        letter-spacing: -0.5px;
-        vertical-align: middle;
-        padding: 12px;
-        background-color: #22833F;
-        border: none;
-        border-radius: 25px;
-        color: #FFF;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 8px;
-        cursor: pointer;
+
+      font-family: "Noto Sans", sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      width: 95%;
+      letter-spacing: -0.5px;
+      vertical-align: middle;
+      padding: 12px;
+      background-color: #22833F;
+      border: none;
+      border-radius: 25px;
+      color: #FFF;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+
+        background-color: #5CC37B;
+      }
     }
     
     &-phoneIcon {
