--- a/src/scss/mobile/reviews/-doctors/__items/__card/__card.scss
+++ b/src/scss/mobile/reviews/-doctors/__items/__card/__card.scss
@@ -1,16 +1,16 @@
 .reviews-doctors__card {
 
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 100%;
-    height: 496px;
-    background-color: #FFFFFF;
-    background-repeat: no-repeat;
-    background-position: right 10px;
-    background-size: auto 270px;
-    border-radius: 16px;
-    transition: background-color 0.2s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  background-color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-position: right 10px;
+  background-size: auto 270px;
+  border-radius: 16px;
+  transition: background-color 0.2s ease-in-out;
+  height: 550px;
 
     &:hover{
       background-color: rgba(92, 195, 123, 0.3);
@@ -67,6 +67,7 @@
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 12px;
     padding: 10px;
     background-color: #FFFFFF;
@@ -77,6 +78,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    height: 350px;
   }
 
   &__name {
