--- a/src/scss/mobile/reviews/-main/__container/-item/-item.scss
+++ b/src/scss/mobile/reviews/-main/__container/-item/-item.scss
@@ -30,6 +30,10 @@
 
       width: 540px;
     }
+
+    &2{
+      background-image: url("/src/assets/png/pacients/pacient2.png");
+    }
   }
 
   &__block1 {
