--- a/src/scss/blocks/index.scss
+++ b/src/scss/blocks/index.scss
@@ -27,6 +27,7 @@
 @use './message/message';
 @use './opinion/opinion';
 @use './backblur/backblur';
+@use './popupQuiz/popupQuiz';
 
 
 input {outline:none;}
