--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -84,3 +84,4 @@
 @use './mobile/footer/__license/_licence.scss' as *;
 @use './mobile/footer/__warning/_warning.scss' as *;
 @use './mobile/footer/__fringe/_fringe.scss' as *;
+@use './mobile/footer/__prorok/prorok' as *;
