--- a/src/scss/mobile/header/__mobileMenu/_application/_application.scss
+++ b/src/scss/mobile/header/__mobileMenu/_application/_application.scss
@@ -7,6 +7,13 @@
     gap: 30px;
     border-radius: 0 0 16px 16px;
 
+    & a{
+        width: 95%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     &-btn {
 
       font-family: "Noto Sans", sans-serif;
