--- a/src/scss/mobile/header/address/address_content.scss
+++ b/src/scss/mobile/header/address/address_content.scss
@@ -108,8 +108,9 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        gap: 44px;
+        // gap: 44px;
         transform: translateY(-10px);
+        width: 467px;
 
         &_text {
             font-size: 16px;
