--- a/src/scss/mobile/header/header.scss
+++ b/src/scss/mobile/header/header.scss
@@ -4,18 +4,21 @@
     right: 0;
     top: 0;
     z-index: 1000;
+    background-color: rgb(229 229 229 / 30%);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 8px 18px 0 #0000001A;
 
     &__content {
         padding: 0 10px 10px;
-      background-color: rgb(229 229 229 / 30%);
-        border-radius: 12px 12px 16px 16px;
+      // background-color: rgb(229 229 229 / 30%);
+      //   border-radius: 12px 12px 16px 16px;
         display: flex;
         justify-content: space-between;
         position: relative;
-        backdrop-filter: blur(10px);
+        // backdrop-filter: blur(10px);
         max-width: 500px;
         margin: 0 auto;
-        box-shadow: 0 8px 18px 0 #0000001A;
+        // box-shadow: 0 8px 18px 0 #0000001A;
     }
 
     &__container {
@@ -38,6 +41,10 @@
     .header {
         &__content {
           padding: 20px 20px 5px;
+          backdrop-filter: unset;
+          background-color: unset;
+          border-radius: unset;
+          box-shadow:  unset;
         }
     }
 }
