--- a/src/scss/mobile/reviews/-runningLine/__runningLine.scss
+++ b/src/scss/mobile/reviews/-runningLine/__runningLine.scss
@@ -3,6 +3,12 @@
   height: 240px;
   display: flex;
   align-items: center;
+  margin: 0 -7.85%;
+
+  @media screen and (max-width: 1671px) {
+
+    margin: 0 -20%;
+  }
 
   @media screen and (max-width: 1193px) {
 
@@ -48,7 +54,7 @@
       &:hover {
 
         transform: scale(105%) translateY(-10px);
-        box-shadow: 0 15px 8px 0 #00000026;
+        box-shadow: 0 10px 8px 0 #00000026;
       }
     }
   }
