--- a/src/scss/mobile/reviews/-runningLine/__runningLine.scss
+++ b/src/scss/mobile/reviews/-runningLine/__runningLine.scss
@@ -3,12 +3,9 @@
   height: 240px;
   display: flex;
   align-items: center;
-  margin: 0 -7.85%;
-
-  @media screen and (max-width: 1671px) {
-
-    margin: 0 -20%;
-  }
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  width: 100vw;
 
   @media screen and (max-width: 1193px) {
 
