--- a/src/scss/blocks/popupQuiz/_header/_header.scss
+++ b/src/scss/blocks/popupQuiz/_header/_header.scss
@@ -35,8 +35,26 @@
         width: 174px;
         height: auto;
         position: absolute;
-        transform: rotate(15deg);
+        transform: rotate(-15deg);
         left: 36px;
         top: 42px;
+    }
+}
+
+@media (max-width: 1194px) {
+    .popupQuiz{
+        &__header-text1{
+            left: 80px;
+            right: unset;
+        }
+
+        &__header-text2{
+            left: unset;
+            right: 80px;
+        }
+
+        &__img{
+            display: none;
+        }
     }
 }
