--- a/src/scss/blocks/popupQuiz/_text/_text.scss
+++ b/src/scss/blocks/popupQuiz/_text/_text.scss
@@ -3,6 +3,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        max-width: 654px;
 
         &--text{
             text-align: center;
@@ -11,6 +12,9 @@
             font-weight: 800;
             line-height: 36px;
             letter-spacing: -1px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
             &_whiteGreen{
                 color: rgba(92, 195, 123, 1);
@@ -20,5 +24,16 @@
                 color: rgba(34, 131, 63, 1);
             }
         }
+
+        &--p{
+            text-align: center;
+            font-family: 'Noto-sans', sans-serif;
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 32px;
+            letter-spacing: 0px;
+            color: rgba(45, 45, 45, 1);
+        }
     }
 }
+
