--- a/src/scss/blocks/request/_request.scss
+++ b/src/scss/blocks/request/_request.scss
@@ -11,7 +11,7 @@
         min-height: 500px;
         height: auto;
         border-radius: 16px;
-        background-image: url('../../../assets/png/request/women.jpg');
+        background-image: url('../../../assets/png/request/women.png');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
