--- a/src/scss/mobile/footer/__prorok/_prorok.scss
+++ b/src/scss/mobile/footer/__prorok/_prorok.scss
@@ -3,5 +3,10 @@
         width: 165px;
         height: 50px;
         grid-area: prorok;
+
+        &--link{
+            width: fit-content;
+            height: fit-content;
+        }
     }
 }
